--- a/src/app/components/administrador/crud-producto/crud-producto.component.html
+++ b/src/app/components/administrador/crud-producto/crud-producto.component.html
@@ -1,1 +1,117 @@
-<p>crud-producto works!</p>
+<div class="container mt-2">
+    <button class="btn btn-primary mt" (click)="verModal(modalRegistro)">Registrar producto</button>
+
+    <p class="text-center mt-3 h2">Productos</p>
+
+    <table class="table">
+        <thead>
+            <tr>
+                <th class="text-center" style="width: 10%;">Código </th>
+                <th class="text-center" style="width: 20%;">Nombre</th>
+                <th class="text-center" style="width: 15%;">Precio</th>
+                <th class="text-center" style="width: 15%;">Stock</th>
+                <th class="text-center" style="width: 20%;">Categoría</th>
+                <th class="text-center" style="width: 15%;">Opciones</th>
+            </tr>
+        </thead>
+        <tbody>
+            <tr *ngFor="let producto of productos;let i = index">
+                <td class="text-center">{{producto.idProducto}}</td>
+                <td class="text-center">{{producto.nombreProducto}}</td>
+                <td class="text-center">{{producto.precioProducto}}</td>
+                <td class="text-center">{{producto.stockProducto}}</td>
+                <td class="text-center">{{producto.categoria.nombreCategoria}}</td>
+                <td class="text-center">
+                    <i style="cursor: pointer;" class="mr-4 bi bi-pencil" (click)="editar(i)"></i>
+                    <i style="cursor: pointer;" class="bi bi-trash-fill" (click)="eliminar(i)"></i>
+                </td>
+            </tr>
+
+        </tbody>
+    </table>
+    <div class="d-flex flex-row-reverse">
+        <button class="btn btn-success">Registrar pedido</button>
+    </div>
+
+    <ng-template #modalRegistro let-modal>
+        <div class="modal-header">
+            <h4 class="modal-title">
+                <span>Registro de producto</span>
+            </h4>
+            <button type="button" class="close" aria-label="Close" (click)="modal.dismiss('Cross click')">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        <div class="modal-body">
+            <form id="id_registra" action="saveProducto" method="POST">
+                <input type="hidden" id="id_codigo" name="cod_pro">
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Nombre</label>
+                            <input type="text" class="form-control" id="nom_pro" name="nom_pro"
+                                placeholder="Nombre del producto">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Precio</label>
+                            <input type="text" class="form-control" id="pre_pro" name="pre_pro"
+                                placeholder="Ingrese S/0.00">
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Stock</label>
+                            <input type="text" class="form-control" id="stock_pro" name="stock_pro"
+                                placeholder="Ingrese Stock">
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Categoria</label><br>
+                            <select class="form-control" id="categoria" name="categoria">
+                                <option selected disabled value="-1">[SELECCIONE]</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Proveedor</label><br>
+                            <select class="form-control" id="proveedor" name="proveedor">
+                                <option selected disabled value="-1">[SELECCIONE]</option>
+                            </select>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-12">
+                        <div class="form-group">
+                            <label>Descripción</label>
+                            <input type="text" class="form-control" id="descripcion" name="stock_pro"
+                                placeholder="Ingrese descripcion">
+                        </div>
+                    </div>
+                </div>
+
+                <div class="row">
+                    <div class="col-md-6">
+                        <div class="form-group">
+                            <label>Elegir imagen</label>
+                            <input type="file" class="form-control" id="id_foto1" name="foto1">
+                        </div>
+                    </div>
+                </div>
+
+            </form>
+        </div>
+        <div class="modal-footer">
+            <button type="submit" class="btn btn-primary">Registrar</button>
+        </div>
+    </ng-template>
+</div>
