--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -8,7 +8,7 @@
             </li>
           
           </ul>
-            <a class="btn btn-outline-success my-2 my-sm-0" type="submit" [routerLink]="['/login']">Login</a>
+            <a class="btn btn-success my-2 my-sm-0" type="submit" [routerLink]="['/login']">Login</a>
         </div>
       </nav>
     
