--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -14,5 +14,5 @@
     <input type="submit" value="Ingresar" class="btn btn-primary btn-block">
 </form>
 <div class="text-center">
-    <a class="registrarse"> Registrarse</a>
+    <a href="http://localhost:8086/Spring-Articulo-SOAP/index.jsp" class="registrarse"> Registrarse</a>
 </div>
