--- a/src/app/components/cliente/productos/productos.component.html
+++ b/src/app/components/cliente/productos/productos.component.html
@@ -8,8 +8,7 @@
 <div class="card-columns">
 
     <div *ngFor="let producto of productos;let i = index" class="card animated fadeIn fast p-3">
-        <!-- <img [src]=" heroe.img" class="card-img-top img-fluid" [alt]="heroe.nombre"> -->
-        <img src="https://i.blogs.es/ca32d0/pcbuild2/450_1000.jpg" class="card-img-top img-fluid" alt="">
+        <img [src]="producto.fotoProducto" class="card-img-top img-fluid" [alt]="producto.fotoProducto">
         <div class="card-block mt-3">
             <h5 class="card-title">{{producto.nombreProducto}}</h5>
             <p class="card-text">Precio: {{producto.precioProducto | currency:'S/. '}}</p>
