crud producto terminado

--- a/src/app/components/cliente/producto/producto.component.html
+++ b/src/app/components/cliente/producto/producto.component.html
@@ -2,7 +2,7 @@
 <div class="d-flex" *ngIf="producto">
 
     <div class="col-6">
-        <img [src]="producto.fotoProducto1" class="card-img-top img-fluid" [alt]="" style="height: 320px;">
+        <img [src]="producto.fotoProducto" class="card-img-top img-fluid" [alt]="" style="height: 320px;">
         <div class="card-block mt-2">
             <button (click)="volver()" type="button" class="btn btn-outline-danger mt-3">Volver</button>
         </div>
