--- a/src/app/components/administrador/crud-producto/crud-producto.component.html
+++ b/src/app/components/administrador/crud-producto/crud-producto.component.html
@@ -31,10 +31,10 @@
     </table>
     <pagination-controls (pageChange)="p = $event"></pagination-controls>
  
-    <ng-template #modalRegistro let-modal>
+    <ng-template style="width: 100%;" #modalRegistro let-modal>
         <div class="modal-header">
             <h4 class="modal-title">
-                <span>Registro de producto</span>
+                <span>{{mensajeBoton}}</span>
             </h4>
             <button type="button" class="close" aria-label="Close" (click)="cerrar()">
                 <span aria-hidden="true">&times;</span>
@@ -54,7 +54,7 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <label>Precio{{producto.stockProducto}}</label>
+                            <label>Precio</label>
                             <input [(ngModel)]="producto.precioProducto" type="text" class="form-control" id="precio" name="precio"
                                 placeholder="Ingrese S/0.00">
                         </div>
@@ -102,7 +102,7 @@
                     </div>
                 </div>
 
-                <div *ngIf="!producto.fotoProducto" class="row">
+                <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
                             <label>Elegir imagen</label>
@@ -113,7 +113,7 @@
                 <div *ngIf="producto.fotoProducto" class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            <img [src]="producto.fotoProducto" alt="">
+                            <img style="width: 150px;height: 150px;" [src]="producto.fotoProducto" alt="">
                         </div>
                     </div>
                 </div>
@@ -122,10 +122,10 @@
             </form>
         </div>
         <div class="modal-footer">
-            <button *ngIf="downloadURL" (click)="saveProducto()" type="submit" class="btn btn-primary">Registrar</button>
+            <button *ngIf="downloadURL" (click)="saveProducto()" type="submit" class="btn btn-primary">{{mensajeBoton}}</button>
         </div>
-        <div *ngIf="producto.fotoProducto" class="modal-footer">
-            <button  (click)="editarProducto()" type="submit" class="btn btn-primary">Actualizar</button>
+        <div *ngIf="producto.fotoProducto && !downloadURL" class="modal-footer">
+            <button  (click)="editarProducto()" type="submit" class="btn btn-primary">{{mensajeBoton}}</button>
         </div>
     </ng-template>
     
