--- a/src/app/components/cliente/carrito/carrito.component.html
+++ b/src/app/components/cliente/carrito/carrito.component.html
@@ -26,7 +26,7 @@
     </tbody>
   </table>
   <div class="d-flex flex-row-reverse">
-      <button class="btn btn-success">Registrar pedido</button>
+      <button (click)="confirmarPedido()" class="btn btn-success">Confirmar pedido</button>
   </div>
 
 </div>
