--- a/src/app/components/cliente/producto/producto.component.html
+++ b/src/app/components/cliente/producto/producto.component.html
@@ -23,7 +23,7 @@
         </div>
 
         <div class="card-block mt-5">
-            <button (click)="agregar()" type="button" class="btn btn-primary btn-block mt-3">Agregar</button>
+            <button (click)="agregar(producto)" type="button" class="btn btn-primary btn-block mt-3">Agregar</button>
         </div>
 
     </div>
