--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -1,34 +1,34 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
-    <h4 class="navbar-brand">Tech</h4>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['producto']">CRUD Productos</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['servicio']">CRUD Servicios</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['usuario']">CRUD Usuarios</a>
-            </li>
 
-        </ul>
-        <ul class="navbar-nav">
-           <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown"
-                    aria-haspopup="true" aria-expanded="false">
-                    {{nombreAdministrador}}
+    <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
+        <h4 class="navbar-brand">Bienvenido: {{administrador.nombreUsuario}}</h4>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['producto']">CRUD Productos</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['servicio']">CRUD Servicios</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['usuario']">CRUD Usuarios</a>
+                </li>
+    
+            </ul>
+           
+            <div class="dropdown mr-3">
+                <a class="btn btn-light dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Opciones
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" [routerLink]="['perfilAdministrador']">Perfil</a>
-                    
-                    <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" [routerLink]="['/home']">Cerrar sesión</a>
+                        
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" [routerLink]="['/home']">Cerrar sesión</a>
                 </div>
-            </li>
-        </ul>
-
-    </div>
-</nav>
-<br><br><br>
-<router-outlet></router-outlet>
+              </div>
+    
+        </div>
+    </nav>
+    <br><br><br>
+    <router-outlet></router-outlet>
