--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -1,34 +1,39 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
-    <h4 class="navbar-brand" >Tech</h4>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['productos']">Productos</a>
-            </li>
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['servicios']">Servicios</a>
-            </li>
+<div class="container">
+    
+    <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
+        <h4 class="navbar-brand">Bienvenido: {{usuario.nombreUsuario}}</h4>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['productos']">Productos</a>
+                </li>
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['servicios']">Servicios</a>
+                </li>
 
-        </ul>
-        <ul class="navbar-nav">
-            <li class="nav-item active">
-                <a class="nav-link" [routerLink]="['carrito']"><i class="bi bi-cart4"> Cesta</i></a>
-            </li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle"  id="navbarDropdownMenuLink" role="button"
-                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                    {{nombreCliente}}
+            </ul>
+            <ul class="navbar-nav">
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['carrito']"><i class="bi bi-cart4"> Cesta</i></a>
+                </li>
+
+                
+            </ul>
+            <div class="dropdown mr-3">
+                <a class="btn btn-light dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Opciones
                 </a>
-                <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
                     <a class="dropdown-item" [routerLink]="['perfilCliente']">Perfil</a>
-                    <a class="dropdown-item"[routerLink]="['pedidos']">Pedidos</a>
+                    <a class="dropdown-item" [routerLink]="['pedidos']">Pedidos</a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" [routerLink]="['/home']">Cerrar sesión</a>
                 </div>
-            </li>
-        </ul>
+              </div>
 
-    </div>
-</nav>
-<br><br><br>
-<router-outlet></router-outlet>
+        </div>
+    </nav>
+    <br><br><br>
+    <router-outlet></router-outlet>
+</div>
