--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -5,13 +5,13 @@
   
     <div class="form-group">
         <label>Usuario:</label>
-        <input type="text" name="login" class="form-control">
+        <input [(ngModel)]="usuario" type="text" name="login" class="form-control">
     </div>
     <div class="form-group">
         <label>Password:</label>
-        <input  type="password" name="pass" class="form-control">
+        <input [(ngModel)]="password" type="password" name="pass" class="form-control">
     </div>
-    <input type="submit" value="Ingresar" class="btn btn-primary btn-block">
+    <input (click)="iniciarSesion()" type="submit" value="Ingresar" class="btn btn-primary btn-block">
 </form>
 <div class="text-center">
     <a href="http://localhost:8086/Spring-Articulo-SOAP/index.jsp" class="registrarse"> Registrarse</a>
