--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+<div *ngIf="usuario" class="container">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-danger fixed-top">
         <h4 class="navbar-brand">Bienvenido: {{usuario.nombreUsuario}}</h4>
