--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,16 +1,15 @@
+<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+  <a class="navbar-brand" [routerLink]="['/home']">TECH</a>
+  <div class="collapse navbar-collapse" id="navbarSupportedContent">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active">
+        <a class="nav-link" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
+      </li>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
-        <a class="navbar-brand" [routerLink]="['/home']">TECH</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-              <a class="nav-link" [routerLink]="['/home']">Home <span class="sr-only">(current)</span></a>
-            </li>
-          
-          </ul>
-            <a class="btn btn-success my-2 my-sm-0" type="submit" [routerLink]="['/login']">Login</a>
-        </div>
-      </nav>
-    
+    </ul>
+    <a class="btn btn-success my-2 my-sm-0" type="submit" [routerLink]="['/login']">Login</a>
+  </div>
+</nav>
+<img width="100%" src="https://firebasestorage.googleapis.com/v0/b/veterinaria-imgs.appspot.com/o/productos%2Fportada.jpg?alt=media&token=aea0b6e1-3d1b-4ab1-88ab-b57dd8615303" alt="portada">
 
 <router-outlet></router-outlet>
