Actualizar pedido modal

--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -12,6 +12,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" [routerLink]="['usuario']">CRUD Usuarios</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" [routerLink]="['boletas']">Pedidos</a>
+                </li>
     
             </ul>
            
