--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -1,3 +1,4 @@
+<div *ngIf="administrador">
    
     <nav class="navbar navbar-expand-lg navbar-dark bg-success fixed-top">
         <h4 class="navbar-brand">Bienvenido: {{administrador.nombreUsuario}}</h4>
@@ -35,3 +36,5 @@
     </nav>
     <br><br><br>
     <router-outlet ></router-outlet>
+
+</div>
