--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -7,11 +7,11 @@
 
         <div class="form-group">
             <label>Usuario:</label>
-            <input [(ngModel)]="usuario" type="text" name="login" class="form-control">
+            <input required [(ngModel)]="usuario" type="text" name="login" class="form-control">
         </div>
         <div class="form-group">
             <label>Password:</label>
-            <input [(ngModel)]="password" type="password" name="pass" class="form-control">
+            <input required [(ngModel)]="password" type="password" name="pass" class="form-control">
         </div>
         <input (click)="iniciarSesion()" type="submit" value="Ingresar" class="btn btn-primary btn-block">
     </form>
