Sesion limpiar producto

--- a/src/app/components/administrador/administrador.component.html
+++ b/src/app/components/administrador/administrador.component.html
@@ -28,7 +28,7 @@
                     <a class="dropdown-item" [routerLink]="['perfilAdministrador']">Perfil</a>
                         
                         <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" [routerLink]="['/home']">Cerrar sesión</a>
+                        <a style="cursor: pointer;" class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a>
                 </div>
               </div>
     
