--- a/src/app/components/cliente/cliente.component.html
+++ b/src/app/components/cliente/cliente.component.html
@@ -28,7 +28,8 @@
                     <a class="dropdown-item" [routerLink]="['perfilCliente']">Perfil</a>
                     <a class="dropdown-item" [routerLink]="['pedidos']">Pedidos</a>
                     <div class="dropdown-divider"></div>
-                    <a class="dropdown-item" [routerLink]="['/home']">Cerrar sesión</a>
+                    <a style="cursor:pointer;" class="dropdown-item" (click)="cerrarSesion()">Cerrar sesión</a>
+                 
                 </div>
               </div>
 
